--- a/styles.css
+++ b/styles.css
@@ -149,3 +149,62 @@ header p{
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
+.todo-item-text{
+  flex: 1;
+  font-size: 1rem;
+  transition: all 0.2s;
+}
+.todo-item.completed .todo-item-text{
+  text-decoration: line-through;
+  color: var(--gray);
+}
+.delete-btn{
+  background: none;
+  border: navajowhite;
+  color: var(--gray);
+  cursor: pointer;
+  opacity: 0;
+  transition: all 0.2s;
+}
+.delete-btn:hover{
+  color: var(--danger);
+}
+.empty-state{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0;
+  color: var(--gray);
+}
+.empty-state i{
+  font-size: 40px;
+  margin-bottom: 10px;
+  opacity: 0.7;
+}
+.hidden{
+  display: none;
+
+}
+footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 25px;
+  border-top: 1px solid var(--border);
+  background-color: var(--light);
+  font-size: 14px;
+}
+#items-left{
+  color: var(--gray);
+}
+#clear-completed{
+  background: none;
+  border: none;
+  color: var(--gray);
+  cursor: pointer;
+  transition: all 0.2s;
+}
+#clear-completed:hover{
+  color: var(--danger);
+}
